Bug 488694 - SQL plugin not found in Kate
Summary: SQL plugin not found in Kate
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: 24.01.75
Platform: Microsoft Windows Other
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-06-18 22:43 UTC by omarmiguelsanchez
Modified: 2024-07-09 17:28 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description omarmiguelsanchez 2024-06-18 22:43:12 UTC
***
If you're not sure this is actually a bug, instead post about it at https://discuss.kde.org

If you're reporting a crash, attach a backtrace with debug symbols; see https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***

SUMMARY


STEPS TO REPRODUCE
1. open plugins
2. search sql
3. no found it

OBSERVED RESULT
sql pluging no found it

EXPECTED RESULT
sql pluging found it

SOFTWARE/OS VERSIONS
Windows: i use win11
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 TraceyC 2024-06-19 21:28:24 UTC
I can confirm that the SQL plugin is missing in Kate 24.05.1 on Solus Plasma 6 and on 24.05.0 on KDE Neon
It's still advertised as a plugin on the app page https://kate-editor.org/about-kate/

katesqlplugin.so is not present in the respective plugin folder, for Neon that's
/usr/lib/x86_64-linux-gnu/qt6/plugins/kf6/ktexteditor

This came up in a forum thread as well
https://discuss.kde.org/t/kate-sql-plugin/11896/5

It was still present in 23.08.5
Comment 2 TraceyC 2024-06-19 21:28:45 UTC
Confirmed
Comment 3 Christoph Cullmann 2024-07-05 19:05:42 UTC
That is a packaging issue.
If the needed Qt SQL libraries are there, this is still build.
Comment 4 Christoph Cullmann 2024-07-05 20:21:03 UTC
Seems that for Windows the KWallet dependency is the issue, will take a look.
For Linux that is something that needs to be reported to the packagers.
Comment 5 Reilly Brogan 2024-07-09 02:58:54 UTC
Hi! One of the KDE maintainers on Solus here. This is not a packaging issue and is affecting Kate builds on all distros. There's a typo in ` /addons/katesql/CMakeLists.txt`, where it says `KF5Wallet_FOUND` it should be `KF6Wallet_FOUND`. Since KF5Wallet is never actually searched for this block will never be true, meaning that the katesql addon isn't built for any distros currently.

If that was all that there was obviously I would just submit a MR for it, patch it in our own packages and move on but unfortunately it appears that this cmake issue has hidden the fact that katesql wasn't actually fully ported to Qt6. I get numerous build errors that will need to be fixed, hopefully that can get done in time for 24.08.
Comment 6 Christoph Cullmann 2024-07-09 07:39:53 UTC
(In reply to Reilly Brogan from comment #5)
> Hi! One of the KDE maintainers on Solus here. This is not a packaging issue
> and is affecting Kate builds on all distros. There's a typo in `
> /addons/katesql/CMakeLists.txt`, where it says `KF5Wallet_FOUND` it should
> be `KF6Wallet_FOUND`. Since KF5Wallet is never actually searched for this
> block will never be true, meaning that the katesql addon isn't built for any
> distros currently.
> 
> If that was all that there was obviously I would just submit a MR for it,
> patch it in our own packages and move on but unfortunately it appears that
> this cmake issue has hidden the fact that katesql wasn't actually fully
> ported to Qt6. I get numerous build errors that will need to be fixed,
> hopefully that can get done in time for 24.08.

Hu, good catch. I can fix that.
Still for Windows we need to port away from that.
Comment 7 Bug Janitor Service 2024-07-09 07:52:31 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/kate/-/merge_requests/1537
Comment 8 Christoph Cullmann 2024-07-09 09:00:02 UTC
Git commit d7c3259d81ddd6089c18e028b31e3f6a6d3574f6 by Christoph Cullmann, on behalf of Waqar Ahmed.
Committed on 09/07/2024 at 08:54.
Pushed by cullmann into branch 'master'.

Fix katesql plugin build

Haven't tested the plugin, just fixed it so that it builds with KF/Qt 6

M  +1    -1    addons/katesql/CMakeLists.txt
M  +9    -9    addons/katesql/dataoutputmodel.cpp
M  +2    -2    addons/katesql/dataoutputwidget.cpp
M  +1    -3    addons/katesql/katesqlview.cpp
M  +2    -2    addons/katesql/outputstylewidget.cpp

https://invent.kde.org/utilities/kate/-/commit/d7c3259d81ddd6089c18e028b31e3f6a6d3574f6
Comment 9 Christoph Cullmann 2024-07-09 17:28:52 UTC
For Windows we need a QtKeychain port, started that now in

https://invent.kde.org/utilities/kate/-/merge_requests/1538