Fix katesql plugin build

Haven't tested the plugin, just fixed it so that it builds with KF/Qt 6

BUG: 488694